kubernetes/k3s/apps/misc/outline/chart/templates/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: outline-mcp
spec:
  hostnames:
    - docs.plexmox.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: public
      namespace: gateways
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: outline
          port: 3000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /mcp
